--- a/app/src/main/res/layout/activity_tags.xml
+++ b/app/src/main/res/layout/activity_tags.xml
@@ -10,21 +10,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.last.androsia.last.TagsActivity">
 
-    <ListView
-        android:id="@+id/tagsListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
-    <!-- <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/tagsGridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnWidth="90dp"
-        android:numColumns="auto_fit"
+        android:numColumns="3"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
         android:stretchMode="columnWidth"
         android:gravity="center"
-        /> -->
+        />
 
 </RelativeLayout>
