--- a/app/src/main/res/layout/tag.xml
+++ b/app/src/main/res/layout/tag.xml
@@ -1,11 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgUser"
         android:layout_width="150dp"
-        android:layout_height="150dp"/>
-</LinearLayout>
+        android:layout_height="150dp"
+        android:scaleType="fitXY"
+        />
+
+    <ImageView
+        android:src="@mipmap/circle_test"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="fitXY"
+        />
+
+    <TextView
+        android:id="@+id/txtCounter"
+        android:textColor="#ff0000"
+        android:textSize="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="10dp"
+        android:rotation="45"
+        />
+
+</RelativeLayout >
 
