place counters for all screens

--- a/app/src/main/res/layout/tag.xml
+++ b/app/src/main/res/layout/tag.xml
@@ -26,6 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:rotation="-35"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="70dp"
         />
 
 </RelativeLayout >
