--- a/app/src/main/res/layout/tag.xml
+++ b/app/src/main/res/layout/tag.xml
@@ -5,12 +5,12 @@
 
     <ImageView
         android:id="@+id/imgUser"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:scaleType="fitXY"
+        android:layout_width="108dp"
+        android:layout_height="108dp"
         android:padding="5dp"
-        android:layout_marginLeft="3dp"
+        android:layout_marginLeft="7dp"
         android:layout_marginTop="6dp"
+        android:scaleType="centerCrop"
         />
 
     <ImageView
