--- a/app/src/main/res/layout/activity_tags.xml
+++ b/app/src/main/res/layout/activity_tags.xml
@@ -77,7 +77,7 @@
                             android:scaleType="center"/>
 
                         <ImageView
-                            android:src="@mipmap/small_tag"
+                            android:src="@mipmap/middle_tag"
                             android:layout_width="130dp"
                             android:layout_height="130dp"/>
 
@@ -109,7 +109,7 @@
                             android:scaleType="center"/>
 
                         <ImageView
-                            android:src="@mipmap/big_tag"
+                            android:src="@mipmap/middle_tag"
                             android:layout_width="130dp"
                             android:layout_height="130dp"/>
 
