--- a/app/src/main/res/layout/add_tag_activity.xml
+++ b/app/src/main/res/layout/add_tag_activity.xml
@@ -9,4 +9,23 @@
 
     <include layout="@layout/add_tag_content" />
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <Button
+            android:id="@+id/btnPicture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btnPicture"/>
+
+        <ImageView
+            android:id="@+id/picture"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_launcher"
+            android:layout_width="wrap_content"/>
+    </LinearLayout>
+
+
+
 </android.support.design.widget.CoordinatorLayout>
