--- a/app/src/main/res/layout/tags_activity.xml
+++ b/app/src/main/res/layout/tags_activity.xml
@@ -23,38 +23,8 @@
                 android:orientation="horizontal">
 
                 <!--   GOLD  -->
-                <RelativeLayout
-                    android:id="@+id/layoutGold"
-                    android:visibility="invisible"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp">
-
-                    <ImageView
-                        android:id="@+id/imgUserGold"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:scaleType="center"/>
-
-                    <ImageView
-                        android:src="@mipmap/big_tag"
-                        android:layout_width="230dp"
-                        android:layout_height="230dp"
-                        android:layout_marginLeft="-14dp"
-                        android:layout_marginTop="-16dp"/>
-
-                    <TextView
-                        android:id="@+id/txtCounterGold"
-                        android:textColor="#ff0000"
-                        android:textSize="50dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:rotation="-35"
-                        android:layout_marginLeft="110dp"
-                        android:layout_marginTop="130dp"/>
-                </RelativeLayout >
+                <include layout="@layout/gold_tag" />
                 <!--  / GOLD  -->
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -71,16 +41,16 @@
 
                         <ImageView
                             android:id="@+id/imgUserSilver"
-                            android:layout_width="130dp"
-                            android:layout_height="130dp"
-                            android:scaleType="center"/>
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="centerCrop"/>
 
                         <ImageView
                             android:src="@mipmap/middle_tag"
-                            android:layout_width="200dp"
-                            android:layout_height="200dp"
-                            android:layout_marginLeft="-14dp"
-                            android:layout_marginTop="-32dp"/>
+                            android:layout_width="220dp"
+                            android:layout_height="220dp"
+                            android:layout_marginLeft="-15dp"
+                            android:layout_marginTop="-48dp"/>
 
                         <TextView
                             android:id="@+id/txtCounterSilver"
@@ -104,16 +74,16 @@
 
                         <ImageView
                             android:id="@+id/imgUserBronze"
-                            android:layout_width="130dp"
-                            android:layout_height="130dp"
-                            android:scaleType="center"/>
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="centerCrop"/>
 
                         <ImageView
                             android:src="@mipmap/middle_tag"
-                            android:layout_width="200dp"
-                            android:layout_height="200dp"
-                            android:layout_marginLeft="-14dp"
-                            android:layout_marginTop="-32dp"/>
+                            android:layout_width="220dp"
+                            android:layout_height="220dp"
+                            android:layout_marginLeft="-15dp"
+                            android:layout_marginTop="-48dp"/>
 
                         <TextView
                             android:id="@+id/txtCounterBronze"
