--- a/app/src/main/res/layout/add_tag_activity.xml
+++ b/app/src/main/res/layout/add_tag_activity.xml
@@ -4,8 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/white"
-    android:paddingLeft="20dp">
+    android:background="@color/white">
 
     <include layout="@layout/gold_tag" />
 
@@ -14,13 +13,12 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginLeft="-40dp"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="20dp">
 
         <EditText
             android:id="@+id/edtTitle"
             android:maxLength="30"
-            android:layout_width="127dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:hint="@string/edtTitle"
             android:layout_gravity="center" />
@@ -74,23 +72,32 @@
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center" >
+                android:layout_gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="S"/>
                 <EditText
                     android:id="@+id/edtScreenSeason"
                     android:maxLength="2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="@string/edtScreenSeason"
-                    android:inputType="number"
-                    android:layout_gravity="center" />
+                    android:hint="@string/edtScreen"
+                    android:inputType="number"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="E"/>
                 <EditText
                     android:id="@+id/edtScreenEpisode"
                     android:maxLength="2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="@string/edtScreenEpisode"
+                    android:hint="@string/edtScreen"
                     android:inputType="number"
-                    android:layout_gravity="center" />
+                    android:layout_gravity="center"/>
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
