--- a/app/src/main/res/layout/gold_tag.xml
+++ b/app/src/main/res/layout/gold_tag.xml
@@ -4,22 +4,21 @@
     android:orientation="vertical"
     android:id="@+id/layoutGold"
     android:visibility="invisible"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="40dp">
+    android:layout_width="220dp"
+    android:layout_height="220dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="30dp">
 
     <ImageView
         android:id="@+id/imgUserGold"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 
     <ImageView
-        android:src="@mipmap/big_tag"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
-        android:layout_marginLeft="-20dp"
-        android:layout_marginTop="-20dp"/>
+        android:src="@drawable/big_tag"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 
     <TextView
         android:id="@+id/txtCounterGold"
@@ -28,6 +27,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:rotation="-35"
-        android:layout_marginLeft="110dp"
-        android:layout_marginTop="130dp"/>
+        android:layout_marginLeft="125dp"
+        android:layout_marginTop="145dp"/>
 </RelativeLayout>
