--- a/app/src/main/res/layout/tag.xml
+++ b/app/src/main/res/layout/tag.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_width="115dp"
+    android:layout_height="115dp" >
 
     <ImageView
         android:id="@+id/imgUser"
-        android:layout_width="108dp"
-        android:layout_height="108dp"
-        android:padding="5dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="6dp"
         android:scaleType="centerCrop"
-        />
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 
     <ImageView
-        android:src="@mipmap/small_tag"
-        android:layout_width="124dp"
-        android:layout_height="124dp"
-        />
+        android:src="@drawable/small_tag"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 
     <TextView
         android:id="@+id/txtCounter"
@@ -27,8 +22,7 @@
         android:layout_height="wrap_content"
         android:rotation="-35"
         android:layout_marginLeft="55dp"
-        android:layout_marginTop="70dp"
-        />
+        android:layout_marginTop="70dp"/>
 
 </RelativeLayout >
 
