Correct path of photo + avoid white flashes + avoid orange selection in gridView

--- a/app/src/main/res/layout/tags_activity.xml
+++ b/app/src/main/res/layout/tags_activity.xml
@@ -116,6 +116,7 @@
                 android:layout_height="wrap_content"
                 android:numColumns="3"
                 android:stretchMode="columnWidth"
+                android:listSelector="@android:color/transparent"
                 android:gravity="center"/>
         </LinearLayout>
     </ScrollView>
