--- a/app/src/main/res/layout/tags_activity.xml
+++ b/app/src/main/res/layout/tags_activity.xml
@@ -105,6 +105,7 @@
                 android:layout_height="wrap_content"
                 android:numColumns="3"
                 android:stretchMode="columnWidth"
+                android:listSelector="#00000000"
                 android:gravity="center"/>
         </LinearLayout>
     </ScrollView>
