--- a/app/src/main/res/values/custom_style.xml
+++ b/app/src/main/res/values/custom_style.xml
@@ -7,5 +7,12 @@
     <style name="CustomTheme" parent="android:Theme">
         <item name="android:windowTitleSize">50dip</item>
         <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
+
+    <style name="PopUpTheme" parent="android:Theme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
     </style>
 </resources>
